--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignInActivity"></activity>
-        <activity android:name=".Appointments"></activity>
+        <activity android:name=".ForgotPasswordActivity"></activity>
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".Appointments" />
+        <activity android:name=".SignInActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
