Change to MainActivity layout New icons Test functionality for signin, signup and forgot password activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ForgotPasswordActivity"></activity>
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".Appointments" />
+        <activity android:name=".AppointmentsActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
