--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".SignInActivity"></activity>
         <activity android:name=".Appointments"></activity>
+        <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".MainActivity">
 
             <intent-filter>
