Timeline functionality and layout Functionality and animations for changing profiles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.vaccineapp">
 
     <application
@@ -9,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileInfoActivity"></activity>
+        <activity android:name=".ProfileInfoActivity"/>
+        <activity android:name=".TimeLineActivity"/>
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ProfilesListActivity" />
         <activity android:name=".ForgotPasswordActivity" />
