--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.github.vipulasri:timelineview:1.1.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.github.vipulasri:timelineview:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
