Changes in: Buttons drawables Class model functions New layouts and drawables for appointments creation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.example.vaccineapp"
         minSdkVersion 16
@@ -32,6 +36,8 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.github.vipulasri:timelineview:1.1.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.github.vipulasri:timelineview:1.1.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'net.danlew:android.joda:2.10.1.2'
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+    implementation 'com.applandeo:material-calendar-view:1.5.1'
 }
