--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.vaccineapp">
 
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activities.Main2Activity"></activity>
+        <activity android:name=".Activities.ProfileEditActivity" />
         <activity android:name=".Activities.AppointmentDetails" />
         <activity android:name=".Activities.ProfileInfoActivity" />
-        <activity android:name=".Activities.TimeLineActivity" />
+        <activity android:name=".Activities.ProfileTimeLineActivity" />
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.ProfilesListActivity" />
         <activity android:name=".Activities.ForgotPasswordActivity" />
